--- a/api/answer/models/answer.settings.json
+++ b/api/answer/models/answer.settings.json
@@ -19,8 +19,8 @@
       "via": "answers"
     },
     "question": {
-      "model": "question",
-      "via": "answers"
+      "via": "answers",
+      "model": "question"
     }
   }
 }
