Update Student model

--- a/api/room/models/room.settings.json
+++ b/api/room/models/room.settings.json
@@ -14,8 +14,8 @@
       "type": "string"
     },
     "students": {
-      "collection": "student",
-      "via": "room"
+      "via": "room",
+      "collection": "student"
     }
   }
 }
