--- a/api/student/models/student.settings.json
+++ b/api/student/models/student.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "students",
   "info": {
-    "name": "Student"
+    "name": "Student",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -17,13 +18,16 @@
       "type": "string"
     },
     "parents": {
-      "via": "children",
       "plugin": "users-permissions",
-      "collection": "user"
+      "collection": "user",
+      "via": "children"
     },
     "room": {
-      "via": "students",
-      "model": "room"
+      "model": "room",
+      "via": "students"
+    },
+    "active": {
+      "type": "boolean"
     }
   }
 }
