Add tag-student relationship

--- a/api/student/models/student.settings.json
+++ b/api/student/models/student.settings.json
@@ -28,6 +28,10 @@
     },
     "active": {
       "type": "boolean"
+    },
+    "tags": {
+      "via": "students",
+      "collection": "tag"
     }
   }
 }
