--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "tags",
   "info": {
-    "name": "Tag"
+    "name": "Tag",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -12,6 +13,11 @@
   "attributes": {
     "tag": {
       "type": "string"
+    },
+    "students": {
+      "collection": "student",
+      "via": "tags",
+      "dominant": true
     }
   }
 }
