--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "strapi-plugin-graphql": "3.4.0",
     "strapi-plugin-upload": "3.4.0",
     "strapi-plugin-users-permissions": "3.4.0",
+    "strapi-provider-email-sendgrid": "^3.4.1",
     "strapi-utils": "3.4.0"
   },
   "author": {
