--- a/api/question/models/question.settings.json
+++ b/api/question/models/question.settings.json
@@ -26,7 +26,9 @@
       "type": "enumeration",
       "enum": [
         "checkbox",
-        "radio"
+        "radio",
+        "select",
+        "date"
       ]
     }
   }
